# joplin-sticky-notes

./: .gitignore  bootstrap.sh  build.sh  joplin_sticky_notes.py  joplin_sticky_notes.spec  lint.sh  note.glade  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  style.css  tray.glade
.github/workflows/: build.yml  lint.yml  test.yml
img/: logo_96_blue.xcf  png_to_ico.txt
integration/: joplin-sticky-notes.desktop  joplin-sticky-notes.vbs
joplin_sticky_notes/: __main__.py  api_helper.py  app.py  note_selection.py
pyinstaller_files/: build_linux.spec
src/: joplin_api_helper.py  joplin_sticky_notes.py  note_selection.py
test/: test_basic.py
ui/: note.glade
